--- a/packages/compass-components/src/components/breadcrumb.stories.mdx
+++ b/packages/compass-components/src/components/breadcrumb.stories.mdx
@@ -7,7 +7,7 @@ import { spacing } from '@leafygreen-ui/tokens';
 const noop = () => {};
 
 <Meta
-  title="Components/Breadcrumbs"
+  title="Components/Navigation/Breadcrumb"
   component={Breadcrumbs}
   parameters={{
     layout: 'centered',
