--- a/packages/compass-components/src/components/empty-content.stories.mdx
+++ b/packages/compass-components/src/components/empty-content.stories.mdx
@@ -6,7 +6,7 @@ import { NoSavedItemsIcon } from './icons/no-saved-items-icon';
 import { ServerIcon } from './icons/server-icon';
 
 <Meta
-  title="Components/EmptyContent"
+  title="Components/Feedback/EmptyContent"
   component={EmptyContent}
   parameters={{ layout: 'centered' }}
   argTypes={{
