--- a/packages/compass-components/src/components/index-icon.stories.mdx
+++ b/packages/compass-components/src/components/index-icon.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Controls } from '@storybook/blocks';
-import IndexIcon from './index-icon';
+import { IndexIcon } from './index-icon';
 
 <Meta
-  title="Components/IndexIcon"
+  title="Components/Indexes/IndexIcon"
   component={IndexIcon}
   parameters={{ layout: 'centered' }}
   argTypes={{
