--- a/packages/compass-components/src/components/insights-chip.stories.mdx
+++ b/packages/compass-components/src/components/insights-chip.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Controls } from '@storybook/blocks';
 import { InsightsChip } from './insights-chip';
 
 <Meta
-  title="Components/InsightsChip"
+  title="Components/Insights/InsightsChip"
   component={InsightsChip}
   parameters={{ layout: 'centered' }}
   argTypes={{
