--- a/packages/compass-components/src/components/loader.stories.mdx
+++ b/packages/compass-components/src/components/loader.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Controls } from '@storybook/blocks';
 import { SpinLoader, SpinLoaderWithLabel, CancelLoader } from './loader';
 
 <Meta
-  title="Components/Loader"
+  title="Components/Feedback/Loader"
   component={SpinLoader}
   parameters={{ layout: 'centered' }}
   argTypes={{
