--- a/packages/compass-components/src/components/placeholder.stories.mdx
+++ b/packages/compass-components/src/components/placeholder.stories.mdx
@@ -4,7 +4,7 @@ import { spacing } from '@leafygreen-ui/tokens';
 import { Placeholder } from './placeholder';
 
 <Meta
-  title="Components/Placeholder"
+  title="Components/Feedback/Placeholder"
   component={Placeholder}
   parameters={{
     controls: { expanded: true },
