--- a/packages/compass-components/src/components/tab-nav-bar.stories.mdx
+++ b/packages/compass-components/src/components/tab-nav-bar.stories.mdx
@@ -4,7 +4,7 @@ import { css } from '@leafygreen-ui/emotion';
 import { spacing } from '@leafygreen-ui/tokens';
 
 <Meta
-  title="Components/TabNavBar"
+  title="Components/Navigation/TabNavBar"
   component={TabNavBar}
   parameters={{ layout: 'centered' }}
   argTypes={{
