--- a/packages/compass-components/src/components/toast.stories.mdx
+++ b/packages/compass-components/src/components/toast.stories.mdx
@@ -1,11 +1,11 @@
 import { Meta, Story, Controls } from '@storybook/blocks';
 import { ToastBody } from './toast-body';
-import { ToastArea, openToast } from '../hooks/use-toast';
+import { ToastArea, openToast } from '@mongodb-js/compass-components';
 import { Button } from './leafygreen';
 
 <Meta
-  title="Components/Toast"
-  component={ToastBody}
+  title="Components/Feedback/Toast"
+  component={ToastArea}
   parameters={{ layout: 'centered' }}
 />
 
