--- a/packages/compass-components/src/components/accordion.stories.mdx
+++ b/packages/compass-components/src/components/accordion.stories.mdx
@@ -5,7 +5,7 @@ import { css } from '@leafygreen-ui/emotion';
 import { spacing } from '@leafygreen-ui/tokens';
 
 <Meta
-  title="Components/Accordion"
+  title="Components/Layout/Accordion"
   component={Accordion}
   parameters={{
     layout: 'centered',
