--- a/packages/compass-components/src/components/bson-value.stories.mdx
+++ b/packages/compass-components/src/components/bson-value.stories.mdx
@@ -9,7 +9,7 @@ import {
 } from 'bson';
 
 <Meta
-  title="Components/BSONValue"
+  title="Components/Data/BSONValue"
   component={BSONValue}
   parameters={{
     layout: 'centered',
