--- a/packages/compass-components/src/components/keyline-card.stories.mdx
+++ b/packages/compass-components/src/components/keyline-card.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Controls } from '@storybook/blocks';
 import { KeylineCard } from './keyline-card';
 
 <Meta
-  title="Components/KeylineCard"
+  title="Components/Layout/KeylineCard"
   component={KeylineCard}
   parameters={{ layout: 'centered' }}
   argTypes={{
