--- a/packages/compass-components/src/components/links/link.stories.mdx
+++ b/packages/compass-components/src/components/links/link.stories.mdx
@@ -8,7 +8,7 @@ import {
 import { Icon } from '../leafygreen';
 
 <Meta
-  title="Components/Links/Link"
+  title="Components/Navigation/Link"
   component={Link}
   parameters={{ layout: 'centered' }}
 />
