--- a/packages/compass-components/src/components/modals/modal.stories.mdx
+++ b/packages/compass-components/src/components/modals/modal.stories.mdx
@@ -8,7 +8,7 @@ import { ModalFooterButton } from './modal-footer-button';
 import { Button } from '../leafygreen';
 
 <Meta
-  title="Components/Modals/Modal"
+  title="Components/Feedback/Modal"
   component={Modal}
   parameters={{
     layout: 'centered',
