--- a/packages/compass-components/src/components/resize-handle.stories.mdx
+++ b/packages/compass-components/src/components/resize-handle.stories.mdx
@@ -5,7 +5,7 @@ import { palette } from '@leafygreen-ui/palette';
 import { Resizable } from 're-resizable';
 
 <Meta
-  title="Components/ResizeHandle"
+  title="Components/Layout/ResizeHandle"
   component={ResizeHandle}
   parameters={{
     layout: 'centered',
