--- a/packages/compass-components/src/components/interactive-popover.stories.mdx
+++ b/packages/compass-components/src/components/interactive-popover.stories.mdx
@@ -2,7 +2,10 @@ import { Meta, Story, Controls } from '@storybook/addon-docs';
 import { InteractivePopover } from './interactive-popover';
 import { Button } from './leafygreen';
 
-<Meta title="Components/InteractivePopover" component={InteractivePopover} />
+<Meta
+  title="Components/Feedback/InteractivePopover"
+  component={InteractivePopover}
+/>
 
 # InteractivePopover
 
