--- a/packages/compass-components/src/components/index-icon.stories.mdx
+++ b/packages/compass-components/src/components/index-icon.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Controls } from '@storybook/blocks';
-import { IndexIcon } from './index-icon';
+import IndexIcon from './index-icon';
 
 <Meta
   title="Components/Indexes/IndexIcon"
